--- a/assets/scss/base/resets.scss
+++ b/assets/scss/base/resets.scss
@@ -3,7 +3,11 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
   -webkit-tap-highlight-color: rgba(255,255,255,0);
+  &:focus {
+    outline: none;
+  }
 }
 
 html {
@@ -11,21 +15,15 @@ html {
   background-color: $bg;
   position: relative;
   font-style: normal;
+  font-size: $fontSize;
 }
 
-h1,h2,h3,h4,h5,h6,p,ul {
-  margin: 0;
-  padding: 0;
+body {
+  font-size: 1.6rem;
 }
 
 h1,h2,h3,h4,h5,h6 {
   font-weight: inherit;
-}
-
-ul {
-  li {
-    list-style-type: none;
-  }
 }
 
 a {
@@ -40,6 +38,10 @@ a {
     text-decoration: none;
     color: inherit;
   }
+}
+
+a, area, button, [role="button"], input, label, select, summary, textarea {
+  touch-action: manipulation;
 }
 
 input {
@@ -59,6 +61,11 @@ input {
 
 img {
   max-width: 100%;
+}
+
+::selection {
+  color: $selectionColor;
+  background-color: $selectionBg;
 }
 
 
