--- a/assets/scss/base/settings.scss
+++ b/assets/scss/base/settings.scss
@@ -1,3 +1,13 @@
+//GRID
+$columns: 12;
+$columnsSpace: 30px;
+//breakpoints
+$screen-xs: 480px;
+$screen-sm: 768px;
+$screen-md: 1024px;
+$screen-lg: 1200px;
+$screen-xl: 1320px;
+
 // FONTS
 //default fontFamily for whole website
 $fontFamily: "Montserrat", Arial, sans-serif;
