added card component

--- a/assets/scss/base/settings.scss
+++ b/assets/scss/base/settings.scss
@@ -32,3 +32,8 @@ $bg: white;
 //selection background-color and color
 $selectionBg: #282828;
 $selectionColor: white;
+
+//COMPONENTS
+$cardBg: white;
+$cardShadow: 0 5px 10px 0 hsla(0,0%,47%,.3);
+$cardPadding: 30px;
