--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,6 +8,7 @@
 //COMPONENTS CLASSES
 @import "components/texts";
 @import "components/media";
+@import "components/card";
 
 //HELPER CLASSES
 @import "base/helpers";
