--- a/assets/scss/base/mixins.scss
+++ b/assets/scss/base/mixins.scss
@@ -17,123 +17,143 @@
 }
 
 //Make responsive grid classes
-@mixin gridInit($columns_count, $breakpoint) {
+@mixin gridInit($columns_count, $breakpoint, $parts: $parts) {
 
-  //columns responsive classes
-  @for $i from 1 through $columns_count {
-    .#{$breakpoint}-#{$i} {
-      flex-grow: 0;
-      flex-shrink: 0;
-      flex-basis: #{$i / $columns_count * 100%};
+  @each $part in $parts {
+
+    //columns responsive classes
+    @if $part == "columns" {
+      @for $i from 1 through $columns_count {
+        .#{$breakpoint}-#{$i} {
+          flex-grow: 0;
+          flex-shrink: 0;
+          flex-basis: #{$i / $columns_count * 100%};
+        }
+      }
     }
-  }
 
-  //columns order classes
-  .#{$breakpoint}-orderFirst {
-    order: -1;
-  }
-  .#{$breakpoint}-orderLast {
-    order: 99;
-  }
+    //columns order classes
+    @if $part == "orders" {
+      .#{$breakpoint}-orderFirst {
+        order: -1;
+      }
+      .#{$breakpoint}-orderLast {
+        order: 99;
+      }
+    }
 
-  //columns align-self classes
-  .#{$breakpoint}-selfStart {
-    align-self: flex-start;
-  }
-  .#{$breakpoint}-selfEnd {
-    align-self: flex-end;
-  }
-  .#{$breakpoint}-selfCenter {
-    align-self: center;
-  }
-  .#{$breakpoint}-selfBaseline {
-    align-self: baseline;
-  }
-  .#{$breakpoint}-selfStretch {
-    align-self: stretch;
-  }
+    //columns align-self classes
+    @if $part == "align-self" {
+      .#{$breakpoint}-selfStart {
+        align-self: flex-start;
+      }
+      .#{$breakpoint}-selfEnd {
+        align-self: flex-end;
+      }
+      .#{$breakpoint}-selfCenter {
+        align-self: center;
+      }
+      .#{$breakpoint}-selfBaseline {
+        align-self: baseline;
+      }
+      .#{$breakpoint}-selfStretch {
+        align-self: stretch;
+      }
+    }
 
-  //row flex-direction classes
-  .#{$breakpoint}-directionRow {
-    flex-direction: row;
-  }
-  .#{$breakpoint}-directionRowReverse {
-    flex-direction: row-reverse;
-  }
-  .#{$breakpoint}-directionColumn {
-    flex-direction: column;
+    //row flex-direction classes
+    @if $part == "directions" {
+      .#{$breakpoint}-directionRow {
+        flex-direction: row;
+      }
+      .#{$breakpoint}-directionRowReverse {
+        flex-direction: row-reverse;
+      }
+      .#{$breakpoint}-directionColumn {
+        flex-direction: column;
 
-  }
-  .#{$breakpoint}-directionColumnReverse {
-    flex-direction: column-reverse;
-  }
+      }
+      .#{$breakpoint}-directionColumnReverse {
+        flex-direction: column-reverse;
+      }
+    }
 
-  //row flex-wrap classes
-  .#{$breakpoint}-nowrap {
-    flex-wrap: nowrap;
-  }
-  .#{$breakpoint}-wrap {
-    flex-wrap: wrap;
-  }
-  .#{$breakpoint}-wrapReverse {
-    flex-wrap: wrap-reverse;
-  }
+    //row flex-wrap classes
+    @if $part == "wraps" {
+      .#{$breakpoint}-nowrap {
+        flex-wrap: nowrap;
+      }
+      .#{$breakpoint}-wrap {
+        flex-wrap: wrap;
+      }
+      .#{$breakpoint}-wrapReverse {
+        flex-wrap: wrap-reverse;
+      }
+    }
 
-  //row justify-content classes
-  .#{$breakpoint}-justifyStart {
-    justify-content: flex-start;
-  }
-  .#{$breakpoint}-justifyEnd {
-    justify-content: flex-end;
-  }
-  .#{$breakpoint}-justifyCenter {
-    justify-content: center;
-  }
-  .#{$breakpoint}-justifyBetween {
-    justify-content: space-between;
-  }
-  .#{$breakpoint}-justifyAround {
-    justify-content: space-around;
-  }
-  .#{$breakpoint}-justifyEvenly {
-    justify-content: space-evenly;
-  }
+    //row justify-content classes
+    @if $part == "justify" {
+      .#{$breakpoint}-justifyStart {
+        justify-content: flex-start;
+      }
+      .#{$breakpoint}-justifyEnd {
+        justify-content: flex-end;
+      }
+      .#{$breakpoint}-justifyCenter {
+        justify-content: center;
+      }
+      .#{$breakpoint}-justifyBetween {
+        justify-content: space-between;
+      }
+      .#{$breakpoint}-justifyAround {
+        justify-content: space-around;
+      }
+      .#{$breakpoint}-justifyEvenly {
+        justify-content: space-evenly;
+      }
+    }
 
-  //row align-items classes
-  .#{$breakpoint}-itemsStart {
-    align-items: flex-start;
-  }
-  .#{$breakpoint}-itemsEnd {
-    align-items: flex-end;
-  }
-  .#{$breakpoint}-itemsCenter {
-    align-items: center;
-  }
-  .#{$breakpoint}-itemsBaseline {
-    align-items: baseline;
-  }
-  .#{$breakpoint}-itemsStretch {
-    align-items: stretch;
-  }
+    //row align-items classes
+    @if $part == "items" {
+      .#{$breakpoint}-itemsStart {
+        align-items: flex-start;
+      }
+      .#{$breakpoint}-itemsEnd {
+        align-items: flex-end;
+      }
+      .#{$breakpoint}-itemsCenter {
+        align-items: center;
+      }
+      .#{$breakpoint}-itemsBaseline {
+        align-items: baseline;
+      }
+      .#{$breakpoint}-itemsStretch {
+        align-items: stretch;
+      }
+    }
 
-  //row align-content classes
-  .#{$breakpoint}-contentStart {
-    align-content: flex-start;
-  }
-  .#{$breakpoint}-contentEnd {
-    align-content: flex-end;
-  }
-  .#{$breakpoint}-contentCenter {
-    align-content: center;
-  }
-  .#{$breakpoint}-contentBetween {
-    align-content: space-between;
-  }
-  .#{$breakpoint}-contentAround {
-    align-content: space-around;
-  }
-  .#{$breakpoint}-contentStretch {
-    align-content: stretch;
+    //row align-content classes
+    @if $part == "content" {
+      .#{$breakpoint}-contentStart {
+        align-content: flex-start;
+      }
+      .#{$breakpoint}-contentEnd {
+        align-content: flex-end;
+      }
+      .#{$breakpoint}-contentCenter {
+        align-content: center;
+      }
+      .#{$breakpoint}-contentBetween {
+        align-content: space-between;
+      }
+      .#{$breakpoint}-contentAround {
+        align-content: space-around;
+      }
+      .#{$breakpoint}-contentStretch {
+        align-content: stretch;
+      }
+    }
+
   }
 
 }
