--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,4 @@
-@import "base/settings"; //mandatory
+@import "settings"; //mandatory
 @import "base/mixins"; //mandatory for other parts
 @import "base/resets";
 
