--- a/assets/scss/settings.scss
+++ b/assets/scss/settings.scss
@@ -1,4 +1,5 @@
 //GRID
+$parts: "columns", "orders", "align-self", "directions", "wraps", "justify", "items", "content";
 $columns: 12;
 $columnsSpace: 30px;
 //breakpoints
