--- a/assets/scss/grid/grid.scss
+++ b/assets/scss/grid/grid.scss
@@ -4,29 +4,29 @@
   width: 100%;
   max-width: 100%;
   display: block;
-  padding-left: floor($columnsSpace / 2);
-  padding-right: floor($columnsSpace / 2);
+  padding-left: $columnsSpace / 2;
+  padding-right: $columnsSpace / 2;
 
   @include break($screen-xs) {
-    width: $screen-xs;
+    width: convert($screen-xs);
     margin-left: auto;
     margin-right: auto;
   }
 
   @include break($screen-sm) {
-    width: $screen-sm;
+    width: convert($screen-sm);
   }
 
   @include break($screen-md) {
-    width: $screen-md;
+    width: convert($screen-md);
   }
 
   @include break($screen-lg) {
-    width: $screen-lg;
+    width: convert($screen-lg);
   }
 
   @include break($screen-xl) {
-    width: $screen-xl;
+    width: convert($screen-xl);
   }
 
 }
@@ -38,12 +38,10 @@
 
 //base style of columns
 .column {
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: 0;
+  flex: 1 1 0;
   max-width: 100%;
-  padding-left: floor($columnsSpace / 2);
-  padding-right: floor($columnsSpace / 2);
+  padding-left: $columnsSpace / 2;
+  padding-right: $columnsSpace / 2;
 }
 
 //make grid according to breakpoints
