--- a/assets/scss/base/resets.scss
+++ b/assets/scss/base/resets.scss
@@ -1,67 +1,19 @@
-//resets styles
+//BASE AND RESETS STYLES
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   -webkit-tap-highlight-color: rgba(255,255,255,0);
-  &:focus {
-    outline: none;
-  }
 }
 
 html {
   font-family: $fontFamily;
-  background-color: $bg;
+  background-color: $background;
   position: relative;
   font-style: normal;
-  font-size: $fontSize;
-}
-
-body {
-  font-size: 1.6rem;
-}
-
-h1,h2,h3,h4,h5,h6 {
-  font-weight: inherit;
-}
-
-a {
-  cursor: pointer;
-  color: inherit;
-  text-decoration: none;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  &:not([href]) {
-    cursor: default;
-  }
-  &.active,&:hover,&:visited,&:focus {
-    text-decoration: none;
-    color: inherit;
-  }
-}
-
-a, area, button, [role="button"], input, label, select, summary, textarea {
-  touch-action: manipulation;
-}
-
-input {
-  border-radius: 0;
-  box-shadow: none;
-  &:focus {
-    outline: none;
-  }
-  &:-webkit-autofill {
-    background: inherit !important;
-    color: inherit !important;
-  }
-  &::-ms-expand {
-    display: none;
-  }
-}
-
-img {
-  max-width: 100%;
-  height: auto;
+  font-size: 62.5%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  min-height: 100%;
 }
 
 ::selection {
@@ -69,6 +21,59 @@ img {
   background-color: $selectionBg;
 }
 
+body {
+  margin: 0;
+  font-size: $fontSize;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
 
+h1,h2,h3 {
+  font-weight: inherit;
+}
 
+h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
+}
 
+main {
+  display: block;
+}
+
+a {
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+  touch-action: manipulation;
+  &:hover,&:active,&:visited,&:focus {
+    text-decoration: none;
+    color: inherit;
+  }
+}
+
+button {
+  overflow: visible;
+  border: 0;
+  font: inherit;
+  -webkit-font-smoothing: inherit;
+  letter-spacing: inherit;
+  background: none;
+  cursor: pointer;
+  touch-action: manipulation;
+}
+
+::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+:focus {
+  outline: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  border: 0;
+}
