added modal and tabs components

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,6 +22,7 @@
 @import "components/pagination";
 @import "components/progress";
 @import "components/modal";
+@import "components/tabs";
 
 //HELPER CLASSES
 @import "helpers/display";
