--- a/assets/scss/settings.scss
+++ b/assets/scss/settings.scss
@@ -136,4 +136,14 @@ $progressBg: #A9A8B2;
 $progressValueBg: #282828;
 
 //MODAL COMPONENTS SETTINGS
-$overlayBg: rgba(0,0,0,0.9);
+$overlayBg: rgba(0,0,0,.9);
+$modalMaxWidth: 90vw;
+$modalMaxHeight: 90vh;
+$modalBg: white;
+$modalContentPadding: 3rem;
+$modalCloseWidth: 3rem;
+$modalCloseHeight: 3rem;
+$modalCloseRight: 3rem;
+$modalCloseTop: 3rem;
+$modalCloseLine: .2rem;
+$modalCloseColor: #282828;
