--- a/assets/scss/components/modal.scss
+++ b/assets/scss/components/modal.scss
@@ -1,5 +1,7 @@
 //overlay behind modal
 .c-overlay {
+  display: none;
+  opacity: 0;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -7,35 +9,39 @@
   right: 0;
   z-index: 5;
   background-color: $overlayBg;
+  transition: opacity 300ms;
 }
 
 //modal
 .c-modal {
+  display: none;
+  opacity: 0;
+  transition: opacity 300ms;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  max-width: 90vw;
-  max-height: 70vh;
+  max-width: $modalMaxWidth;
+  max-height: $modalMaxHeight;
   overflow: auto;
-  background-color: white;
+  background-color: $modalBg;
   z-index: 10;
   .content {
-    padding: 3rem;
+    padding: $modalContentPadding;
   }
   .close {
-    width: 3rem;
-    height: 3rem;
+    width: $modalCloseWidth;
+    height: $modalCloseHeight;
     position: absolute;
-    right: 3rem;
-    top: 3rem;
+    right: $modalCloseRight;
+    top: $modalCloseTop;
     z-index: 10;
     cursor: pointer;
     &:before,&:after {
       content: "";
       width: 100%;
-      height: 2px;
-      background-color: #282828;
+      height: $modalCloseLine;
+      background-color: $modalCloseColor;
       position: absolute;
       top: 50%;
       left: 50%;
