--- a/assets/scss/grid/grid.scss
+++ b/assets/scss/grid/grid.scss
@@ -38,7 +38,7 @@
 
 //base style of columns
 .column {
-  flex: 1 1 0;
+  flex: 1 1 0%;
   max-width: 100%;
   padding-left: $columnsSpace / 2;
   padding-right: $columnsSpace / 2;
