--- a/assets/scss/base/mixins.scss
+++ b/assets/scss/base/mixins.scss
@@ -26,13 +26,14 @@
       @for $i from 1 through $columns_count {
         .#{$breakpoint}-#{$i} {
           flex: 0 0 #{$i / $columns_count * 100%};
+          max-width: #{$i / $columns_count * 100%};
         }
       }
       .#{$breakpoint}-stretch {
          flex: none;
       }
       .#{$breakpoint}-default {
-        flex: 1 1 0;
+        flex: 1 1 0%;
       }
     }
 
@@ -162,6 +163,9 @@
       .#{$breakpoint}-hide {
         display: none;
       }
+      .#{$breakpoint}-show {
+        display: block;
+      }
     }
 
   }
@@ -182,16 +186,34 @@
   border-radius: 0;
   box-shadow: none;
   font-family: inherit;
+  background-color: transparent;
   &:-webkit-autofill {
     background: inherit !important;
     color: inherit !important;
   }
-  &::-ms-expand,&::-webkit-clear-button,&::-webkit-search-decoration,&::-webkit-search-cancel-button,&::-webkit-search-results-button,&::-webkit-search-results-decoration {
+  &::-ms-expand {
+    display: none;
+  }
+  &::-webkit-clear-button, &::-webkit-search-decoration, &::-webkit-search-cancel-button, &::-webkit-search-results-button, &::-webkit-search-results-decoration {
     display: none;
     -webkit-appearance:none;
   }
   &::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
+  }
+}
+
+//Apply specific styles for IE
+@mixin ie() {
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    @content;
+  }
+}
+
+//Apply specific styles for Edge
+@mixin edge() {
+  @supports (-ms-ime-align:auto) {
+    @content;
   }
 }
