--- a/assets/scss/components/progress.scss
+++ b/assets/scss/components/progress.scss
@@ -3,10 +3,16 @@
   width: 100%;
   height: $progressHeight;
   -webkit-appearance: none;
+  -moz-appearance: none;
+  border: none;
+  color: $progressValueBg;
   &::-webkit-progress-bar {
     background-color: $progressBg;
   }
   &::-webkit-progress-value {
+    background-color: $progressValueBg;
+  }
+  &::-moz-progress-bar {
     background-color: $progressValueBg;
   }
 }
