--- a/assets/scss/settings.scss
+++ b/assets/scss/settings.scss
@@ -73,6 +73,7 @@ $carouselIndicatorsSpace: .6rem;
 //STICKY FOOTER COMPONENT SETTINGS
 $footerHeight: 10rem;
 $footerBg: #282828;
+$footerBreakpoint: $screen-sm;
 
 //VIZUAL COMPONENTS SETTINGS
 $vizualHeight: 40rem;
