--- a/assets/scss/settings.scss
+++ b/assets/scss/settings.scss
@@ -38,6 +38,7 @@ $cardPadding: 3rem;
 //MENU COMPONENTS SETTINGS
 $menuBg: #282828;
 $menuFontSize: 1.8rem;
+$menuColor: white;
 //menu in hamburger mode
 $menuHeight: 6rem;
 $menuLineHeight: 4.2rem;
