--- a/assets/scss/components/menu.scss
+++ b/assets/scss/components/menu.scss
@@ -36,7 +36,7 @@
     li {
       font-size: $menuFontSize;
       line-height: $menuLineHeight;
-      color: white;
+      color: $menuColor;
       a {
         display: block;
         &.active {
