--- a/assets/scss/components/media.scss
+++ b/assets/scss/components/media.scss
@@ -6,12 +6,14 @@
   overflow: hidden;
   height: 0;
   img, iframe, video {
-    object-fit: cover;
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
+  }
+  img, video {
+    object-fit: cover;
   }
 }
 
