--- a/assets/scss/components/forms.scss
+++ b/assets/scss/components/forms.scss
@@ -162,7 +162,11 @@ textarea.c-input {
     cursor: pointer;
   }
   input {
-    display: none;
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
     &:checked {
       &~label {
         svg {
